# chronos

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.chronos  Dockerfile.chronos-pg-migrations  Dockerfile.chronos-slim  How-to.md  Makefile  docker-compose.yml
.github/: config.json
.github/workflows/: CI.yaml  build-binary.yml  build-container.yml  pre-commit.yml  release.yml  rust_build.yml  sbom.yml  scan.yml  test.yml  weaver-live-check.yml
chronos_bin/: Cargo.toml
chronos_bin/src/: lib.rs  message_processor.rs  message_receiver.rs  monitor.rs  runner.rs
chronos_bin/src/kafka/: consumer.rs  producer.rs
chronos_bin/src/metrics/: mod.rs  registry.rs  server.rs  spec.yaml
chronos_bin/src/postgres/: pg.rs
chronos_bin/src/telemetry/: jaegar_backend.rs  mod.rs  otlp_collector.rs  register_telemetry.rs
chronos_bin/src/utils/: config.rs  env.rs  util.rs
dev/: dashboards.yaml  docker-compose-lgtm.yaml  lgtm-logging.sh  otelcol-contrib.yaml
dev/dashboards/: chronos.json  testing.json
dev/docker-compose/: compose.yaml  infra.yaml  jaeger.yaml  lgtm.yaml
dev/k6/: README.md  contract.js  load.js
dev/lgtm/: healthcheck.sh  kminion.yaml  prometheus.yaml  sql_exporter.yaml
dev/makefiles/: act.mk  ci.mk  common.mk  dev.mk  docker.mk  integration.mk  k6.mk  rust.mk  telemetry.mk
dev/weaver/production/registry/chronos/: metrics.yaml
dev/weaver/production/templates/registry/markdown/: metrics.md.j2  weaver.yaml
dev/weaver/production/templates/registry/rust/: registry.rs.j2  weaver.yaml
docker/: Dockerfile.chronos  Dockerfile.chronos-pg-migrations  Dockerfile.chronos-slim  Dockerfile.k6
docs/: chronos_metrics.md  weaver-metrics-proposal.md
docs/schema/: resolved-registry.schema.json
examples/: prom_otlp_mock.rs
examples/chronos_ex/: Cargo.toml
examples/chronos_ex/examples/: chronos_ex.rs  opentelemetry.rs  publish_test_message.rs  stdout_example.rs  telemetry_async_simple.rs  telemetry_simple.rs  tracing_example.rs
examples/prom_otlp_mock_runner/: Cargo.toml
examples/weaver/registry/chronos/: metrics.yaml
examples/weaver/templates/registry/markdown/: metrics.md.j2  weaver.yaml
examples/weaver/templates/registry/rust/: registry.rs.j2  weaver.yaml
infra/: otelcol-config.yml
scripts/: apply-github-config.sh  coverage-report.sh  integration.sh
