[package]
name = "chronos_ex"
version = "0.0.2"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
dotenv = "0.15.0"
log = "0.4.14"

tokio.workspace = true
futures.workspace = true

chronos_bin={path="../../chronos_bin"}
chrono = "0.4.23"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
serde_json = "1.0.93"

#tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_api.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-jaeger.workspace = true
# opentelemetry-stdout.workspace = true

# opentelemetry = "0.20"
opentelemetry-stdout = { version = "0.1.0", features = ["trace"] }
# tracing = "0.1"
# tracing-opentelemetry = "0.21"
# tracing-subscriber = "0.3"
