[package]
name = "chronos_ex"
version = "0.0.2"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
dotenv = "0.15.0"
log = "0.4.14"

tokio.workspace = true
futures.workspace = true

chronos_bin={path="../../chronos_bin"}

#tracing
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

#opentelemetry
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true

opentelemetry-stdout = { version = "0.31.0", features = ["trace"] }

